feat: enhance SEO and contact form functionality
- Added meta tags for SEO optimization in index.html
- Updated .gitignore to exclude .env files
- Integrated EmailJS for contact form submissions with rate limiting
- Improved experience page to handle role display with expandable responsibilities
- Added sitemap.xml and robots.txt generation in prerender script
- Updated article dates to ISO format for consistency
- Enhanced Home page introduction and removed redundant achievements list

--- a/index.html
+++ b/index.html
@@ -5,6 +5,53 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yuben Bauty | Software Engineer</title>
+    <meta
+      name="description"
+      content="Yuben Rizky Putra Bauty builds modern web & mobile solutions. Articles, projects, and experience."
+    />
+    <meta name="author" content="Yuben Rizky Putra Bauty" />
+    <meta
+      name="keywords"
+      content="Yuben, Yuben Bauty, Yuben Rizky Putra Bauty, Software Engineer, React, React Native, NestJS"
+    />
+    <link rel="canonical" href="https://yuben.me/" />
+    <meta property="og:site_name" content="Yuben Bauty" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Yuben Bauty | Software Engineer" />
+    <meta
+      property="og:description"
+      content="Yuben Rizky Putra Bauty builds modern web & mobile solutions. Explore articles and projects."
+    />
+    <meta property="og:url" content="https://yuben.me/" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Yuben Bauty | Software Engineer" />
+    <meta
+      name="twitter:description"
+      content="Engineering modern web & mobile experiences by Yuben Rizky Putra Bauty."
+    />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Yuben Rizky Putra Bauty",
+        "alternateName": "Yuben",
+        "jobTitle": "Software Engineer",
+        "url": "https://yuben.me"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Yuben Bauty",
+        "url": "https://yuben.me",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://yuben.me/articles/{search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
