feat: add robot meta tag

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:site_name" content="Yuben Bauty" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Yuben Bauty | Software Engineer" />
+    <meta property="robots" content="index, follow" />
     <meta
       property="og:description"
       content="Yuben Rizky Putra Bauty builds modern web & mobile solutions. Explore articles and projects."
