feat: add profile picture

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         "name": "Yuben Rizky Putra Bauty",
         "alternateName": "Yuben",
         "jobTitle": "Software Engineer",
-        "url": "https://yuben.me"
+        "url": "https://yuben.me",
+        "image": ["https://yuben.me/images/profile.jpg"]
       }
     </script>
     <script type="application/ld+json">
